zwave: new entity IDs. Drop all ids from entity names.

--- a/groups.yaml
+++ b/groups.yaml
@@ -9,8 +9,8 @@ study:
   icon: mdi:printer
   view: true
   entities:
-  - sensor.study_east_temperature_14_1
-  - sensor.study_west_temperature_15_1
+  - sensor.study_east_temperature
+  - sensor.study_west_temperature
   - group.study_compact_ui
   - group.study_appliances
   - media_player.study
@@ -19,8 +19,8 @@ study_compact_ui:
   view: false
   entities:
   - input_select.study_select
-  - climate.study_east_thermostat_14_1
-  - climate.study_west_thermostat_15_1
+  - climate.study_east_thermostat
+  - climate.study_west_thermostat
 study_scenes:
   name: Study
   view: false
@@ -30,20 +30,20 @@ study_heating:
   name: Study Heating
   view: false
   entities:
-  - climate.study_east_thermostat_14_1
-  - climate.study_west_thermostat_15_1
+  - climate.study_east_thermostat
+  - climate.study_west_thermostat
 study_setpoints:
   name: Study Setpoints
   view: false
   entities:
-  - climate.study_east_comfort_setpoint_14_1
-  - climate.study_west_comfort_setpoint_15_1
+  - climate.study_east_comfort_setpoint
+  - climate.study_west_comfort_setpoint
 study_thermostats:
   name: Study Thermostats
   view: false
   entities:
-  - climate.study_east_thermostat_14_1
-  - climate.study_west_thermostat_15_1
+  - climate.study_east_thermostat
+  - climate.study_west_thermostat
 study_lights:
   name: Study Lights
   view: false
@@ -60,7 +60,7 @@ kitchen:
   view: true
   icon: mdi:stove
   entities:
-  - sensor.kitchen_temperature_34_1
+  - sensor.kitchen_temperature
   - group.kitchen_compact_ui
   - media_player.kitchen
   - sensor.greenwave_powernode_54_energy
@@ -71,7 +71,7 @@ kitchen_compact_ui:
   icon: mdi:stove
   entities:
   - input_select.kitchen_select
-  - climate.kitchen_thermostat_34_1
+  - climate.kitchen_thermostat
   - binary_sensor.washing_machine
 kitchen_scenes:
   name: Kitchen
@@ -82,17 +82,17 @@ kitchen_heating:
   name: Kitchen Heating
   view: false
   entities:
-  - climate.kitchen_thermostat_34_1
+  - climate.kitchen_thermostat
 kitchen_setpoints:
   name: Kitchen Setpoints
   view: false
   entities:
-  - climate.kitchen_comfort_setpoint_34_1
+  - climate.kitchen_comfort_setpoint
 kitchen_thermostats:
   name: Kitchen Thermostats
   view: false
   entities:
-  - climate.kitchen_thermostat_34_1
+  - climate.kitchen_thermostat
 kitchen_lights:
   name: Kitchen Lights
   view: false
@@ -102,13 +102,13 @@ hall:
   view: true
   icon: mdi:fullscreen-exit
   entities:
-  - binary_sensor.aeotec_dsb05_multisensor_sensor_3_0
-  - sensor.aeotec_dsb05_multisensor_luminance_3_3
-  - sensor.aeotec_dsb05_multisensor_relative_humidity_3_5
-  - sensor.aeotec_dsb05_multisensor_temperature_3_1
-  - sensor.hall_west_temperature_13_1
-  - sensor.hall_east_temperature_24_1
-  - sensor.annex_hall_temperature_43_1
+  - binary_sensor.aeotec_dsb05_multisensor_sensor
+  - sensor.aeotec_dsb05_multisensor_luminance
+  - sensor.aeotec_dsb05_multisensor_relative_humidity
+  - sensor.aeotec_dsb05_multisensor_temperature
+  - sensor.hall_west_temperature
+  - sensor.hall_east_temperature
+  - sensor.annex_hall_temperature
   #
   - group.hall_compact_ui
   - group.hall_lights
@@ -120,33 +120,33 @@ hall_compact_ui:
   view: false
   icon: mdi:fullscreen-exit
   entities:
-  - climate.hall_west_thermostat_13_1
-  - climate.hall_east_thermostat_24_1
-  - climate.annex_hall_thermostat_43_1
+  - climate.hall_west_thermostat
+  - climate.hall_east_thermostat
+  - climate.annex_hall_thermostat
 hall_scenes:
   name: Hall Scenes
   view: false
 hall_heating:
   entities:
-  - climate.hall_west_thermostat_13_1
-  - climate.hall_east_thermostat_24_1
-  - climate.annex_hall_thermostat_43_1
+  - climate.hall_west_thermostat
+  - climate.hall_east_thermostat
+  - climate.annex_hall_thermostat
   name: Hall Heating
   view: false
 hall_setpoints:
   name: Hall Setpoints
   view: false
   entities:
-  - climate.hall_west_comfort_setpoint_13_1
-  - climate.hall_east_comfort_setpoint_24_1
-  - climate.annex_hall_comfort_setpoint_43_1
+  - climate.hall_west_comfort_setpoint
+  - climate.hall_east_comfort_setpoint
+  - climate.annex_hall_comfort_setpoint
 hall_thermostats:
   name: Hall Thermostats
   view: false
   entities:
-  - climate.hall_west_thermostat_13_1
-  - climate.hall_east_thermostat_24_1
-  - climate.annex_hall_thermostat_43_1
+  - climate.hall_west_thermostat
+  - climate.hall_east_thermostat
+  - climate.annex_hall_thermostat
 hall_lights:
   name: Hall Lights
   view: false
@@ -156,7 +156,7 @@ lounge:
   view: true
   icon: mdi:sofa
   entities:
-  - sensor.lounge_east_temperature_30_1
+  - sensor.lounge_east_temperature
   - group.lounge_compact_ui
   - media_player.lounge
 lounge_compact_ui:
@@ -165,7 +165,7 @@ lounge_compact_ui:
   icon: mdi:sofa
   entities:
   - input_select.lounge_select
-  - climate.lounge_east_thermostat_30_1
+  - climate.lounge_east_thermostat
   - group.lounge_lights
 lounge_scenes:
   name: Lounge
@@ -176,17 +176,17 @@ lounge_heating:
   name: Lounge Heating
   view: false
   entities:
-  - climate.lounge_east_thermostat_30_1
+  - climate.lounge_east_thermostat
 lounge_setpoints:
   name: Lounge Setpoints
   view: false
   entities:
-  - climate.lounge_east_comfort_setpoint_30_1
+  - climate.lounge_east_comfort_setpoint
 lounge_thermostats:
   name: Lounge Thermostats
   view: false
   entities:
-  - climate.lounge_east_thermostat_30_1
+  - climate.lounge_east_thermostat
 lounge_lights:
   entities:
   - light.lounge_east
@@ -200,7 +200,7 @@ library:
   view: true
   icon: mdi:library
   entities:
-  - sensor.library_temperature_25_1
+  - sensor.library_temperature
   - group.library_compact_ui
   - media_player.library
 library_compact_ui:
@@ -209,7 +209,7 @@ library_compact_ui:
   icon: mdi:library
   entities:
   - input_select.library_select
-  - climate.library_thermostat_25_1
+  - climate.library_thermostat
 library_scenes:
   name: Library
   view: false
@@ -219,17 +219,17 @@ library_heating:
   name: Library Heating
   view: false
   entities:
-  - climate.library_thermostat_25_1
+  - climate.library_thermostat
 library_setpoints:
   name: Library Setpoints
   view: false
   entities:
-  - climate.library_comfort_setpoint_25_1
+  - climate.library_comfort_setpoint
 library_thermostats:
   name: Library Thermostats
   view: false
   entities:
-  - climate.library_thermostat_25_1
+  - climate.library_thermostat
 library_lights:
   name: Library Lights
   view: false
@@ -239,7 +239,7 @@ ballroom:
   view: true
   icon: mdi:projector
   entities:
-  - sensor.ballroom_east_temperature_33_1
+  - sensor.ballroom_east_temperature
   - group.ballroom_compact_ui
   - media_player.ballroom
   - media_player.ballroom_amplifier
@@ -249,7 +249,7 @@ ballroom_compact_ui:
   icon: mdi:projector
   entities:
   - input_select.ballroom_select
-  - climate.ballroom_east_thermostat_33_1
+  - climate.ballroom_east_thermostat
 ballroom_scenes:
   name: Ballroom
   view: false
@@ -259,17 +259,17 @@ ballroom_heating:
   name: Ballroom Heating
   view: false
   entities:
-  - climate.ballroom_east_thermostat_33_1
+  - climate.ballroom_east_thermostat
 ballroom_setpoints:
   name: Ballroom Setpoints
   view: false
   entities:
-  - climate.ballroom_east_comfort_setpoint_33_1
+  - climate.ballroom_east_comfort_setpoint
 ballroom_thermostats:
   name: Ballroom Thermostats
   view: false
   entities:
-  - climate.ballroom_east_thermostat_33_1
+  - climate.ballroom_east_thermostat
 ballroom_lights:
   name: Ballroom Lights
   view: false
@@ -286,7 +286,7 @@ guest_room_compact_ui:
   icon: mdi:hotel
   entities:
   - input_select.guest_room_select
-  - climate.danfoss_z_thermostat_014g0013_heating_1_52_1
+  - climate.danfoss_z_thermostat_014g0013_heating_1
 guest_room_scenes:
   name: Guest Room
   view: false
@@ -296,12 +296,12 @@ guest_room_heating:
   name: Guest Room Heating
   view: false
   entities:
-  - climate.danfoss_z_thermostat_014g0013_heating_1_52_1
+  - climate.danfoss_z_thermostat_014g0013_heating_1
 guest_room_setpoints:
   name: Guest Room Setpoints
   view: false
   entities:
-  - climate.danfoss_z_thermostat_014g0013_heating_1_52_1
+  - climate.danfoss_z_thermostat_014g0013_heating_1
 
 bedrooms:
   name: Bedrooms
@@ -312,9 +312,9 @@ bedrooms:
   - group.bedroom_jerome_compact_ui
   - group.bedroom_ros_compact_ui
   - group.guest_room_compact_ui
-  - sensor.bedroom_mark_temperature_29_1
-  - sensor.bedroom_jerome_temperature_44_1
-  - sensor.bedroom_ros_temperature_55_1
+  - sensor.bedroom_mark_temperature
+  - sensor.bedroom_jerome_temperature
+  - sensor.bedroom_ros_temperature
   - sensor.js_bedroom_temperature
   - sensor.js_bedroom_humidity
 
@@ -333,7 +333,7 @@ bedroom_mark_compact_ui:
   view: false
   entities:
   - input_select.marks_bedroom_select
-  - climate.bedroom_mark_thermostat_29_1
+  - climate.bedroom_mark_thermostat
   - group.marks_bedroom_lights
 marks_bedroom_scenes:
   name: "Mark's Bedroom"
@@ -344,17 +344,17 @@ marks_bedroom_heating:
   name: "Mark's Bedroom Heating"
   view: false
   entities:
-  - climate.bedroom_mark_thermostat_29_1
+  - climate.bedroom_mark_thermostat
 marks_bedroom_setpoints:
   name: "Mark's Bedroom Setpoints"
   view: false
   entities:
-  - climate.bedroom_mark_comfort_setpoint_29_1
+  - climate.bedroom_mark_comfort_setpoint
 marks_bedroom_thermostats:
   name: "Mark's Bedroom Thermostats"
   view: false
   entities:
-  - climate.bedroom_mark_thermostat_29_1
+  - climate.bedroom_mark_thermostat
 marks_bedroom_lights:
   name: "Mark's Bedroom Lights"
   view: false
@@ -378,7 +378,7 @@ bedroom_jerome_compact_ui:
   view: false
   entities:
   - input_select.bedroom_jerome_select
-  - climate.bedroom_jerome_thermostat_44_1
+  - climate.bedroom_jerome_thermostat
   - climate.js_bedroom
 bedroom_jerome_scenes:
   name: "Jerome's Bedroom"
@@ -389,17 +389,17 @@ bedroom_jerome_heating:
   name: "Jerome's Bedroom Heating"
   view: false
   entities:
-  - climate.bedroom_jerome_thermostat_44_1
+  - climate.bedroom_jerome_thermostat
 bedroom_jerome_setpoints:
   name: "Jerome's Bedroom Setpoints"
   view: false
   entities:
-  - climate.bedroom_jerome_comfort_setpoint_44_1
+  - climate.bedroom_jerome_comfort_setpoint
 bedroom_jerome_thermostats:
   name: "Jerome's Bedroom Thermostats"
   view: false
   entities:
-  - climate.bedroom_jerome_thermostat_44_1
+  - climate.bedroom_jerome_thermostat
   - climate.js_bedroom
 
 bedroom_ros:
@@ -413,7 +413,7 @@ bedroom_ros_compact_ui:
   view: false
   entities:
   - input_select.bedroom_ros_select
-  - climate.bedroom_ros_thermostat_55_1
+  - climate.bedroom_ros_thermostat
 bedroom_ros_scenes:
   name: "Ros's Bedroom"
   view: false
@@ -423,17 +423,17 @@ bedroom_ros_heating:
   name: "Ros's Bedroom Heating"
   view: false
   entities:
-  - climate.bedroom_ros_thermostat_55_1
+  - climate.bedroom_ros_thermostat
 bedroom_ros_setpoints:
   name: "Ros's Bedroom Setpoints"
   view: false
   entities:
-  - climate.bedroom_ros_comfort_setpoint_55_1
+  - climate.bedroom_ros_comfort_setpoint
 bedroom_ros_thermostats:
   name: "Ros's Bedroom Thermostats"
   view: false
   entities:
-  - climate.bedroom_ros_thermostat_55_1
+  - climate.bedroom_ros_thermostat
 
 radio:
   name: Internet Radio
@@ -582,7 +582,7 @@ annex_heating_override:
   name: Annex Heating Override
   view: false
   entities:
-  - switch.horstmann_asrzw_thermostat_receiver_switch_56_0
+  - switch.horstmann_asrzw_thermostat_receiver_switch
 
 annex_heating_demand:
   name: Annex Heating Demand
@@ -706,58 +706,58 @@ temperatures:
   entities:
   - sensor.main_heating_thermostat_temperature
   - sensor.annex_heating_thermostat_temperature
-  - sensor.aeotec_dsb05_multisensor_temperature_3_1
-  - sensor.ballroom_east_temperature_33_1
-  - sensor.hall_west_temperature_13_1
-  - sensor.hall_east_temperature_24_1
-  - sensor.annex_hall_temperature_43_1
-  - sensor.kitchen_temperature_34_1
-  - sensor.library_temperature_25_1
-  - sensor.lounge_east_temperature_30_1
-  - sensor.bedroom_mark_temperature_29_1
-  - sensor.study_east_temperature_14_1
-  - sensor.study_west_temperature_15_1
-  - sensor.bedroom_jerome_temperature_44_1
-  - sensor.bedroom_ros_temperature_55_1
+  - sensor.aeotec_dsb05_multisensor_temperature
+  - sensor.ballroom_east_temperature
+  - sensor.hall_west_temperature
+  - sensor.hall_east_temperature
+  - sensor.annex_hall_temperature
+  - sensor.kitchen_temperature
+  - sensor.library_temperature
+  - sensor.lounge_east_temperature
+  - sensor.bedroom_mark_temperature
+  - sensor.study_east_temperature
+  - sensor.study_west_temperature
+  - sensor.bedroom_jerome_temperature
+  - sensor.bedroom_ros_temperature
 
 thermostat_devices:
   name: Thermostat Devices
   view: false
   entities:
-  - climate.annex_hall_comfort_setpoint_43_1
-  - climate.ballroom_east_comfort_setpoint_33_1
-  - climate.bedroom_mark_comfort_setpoint_29_1
-  - climate.hall_east_comfort_setpoint_24_1
-  - climate.hall_west_comfort_setpoint_13_1
+  - climate.annex_hall_comfort_setpoint
+  - climate.ballroom_east_comfort_setpoint
+  - climate.bedroom_mark_comfort_setpoint
+  - climate.hall_east_comfort_setpoint
+  - climate.hall_west_comfort_setpoint
   - climate.main_heating_thermostat_heating_1
   - climate.annex_heating_thermostat_heating_1
-  - climate.kitchen_comfort_setpoint_34_1
-  - climate.library_comfort_setpoint_25_1
-  - climate.lounge_east_comfort_setpoint_30_1
-  - climate.study_east_comfort_setpoint_14_1
-  - climate.study_west_comfort_setpoint_15_1
-  - climate.danfoss_z_thermostat_014g0013_heating_1_52_1
-  - climate.bedroom_jerome_comfort_setpoint_44_1
-  - climate.bedroom_ros_comfort_setpoint_55_1
+  - climate.kitchen_comfort_setpoint
+  - climate.library_comfort_setpoint
+  - climate.lounge_east_comfort_setpoint
+  - climate.study_east_comfort_setpoint
+  - climate.study_west_comfort_setpoint
+  - climate.danfoss_z_thermostat_014g0013_heating_1
+  - climate.bedroom_jerome_comfort_setpoint
+  - climate.bedroom_ros_comfort_setpoint
 
 # Front-end thermostats
 thermostats:
   name: Thermostats
   view: false
   entities:
-  - climate.annex_hall_thermostat_43_1
-  - climate.ballroom_east_thermostat_33_1
-  - climate.bedroom_mark_thermostat_29_1
-  - climate.hall_east_thermostat_24_1
-  - climate.hall_west_thermostat_13_1
-  - climate.kitchen_thermostat_34_1
-  - climate.library_thermostat_25_1
-  - climate.lounge_east_thermostat_30_1
-  - climate.study_east_thermostat_14_1
-  - climate.study_west_thermostat_15_1
-  - climate.danfoss_z_thermostat_014g0013_heating_1_52_1
-  - climate.bedroom_jerome_thermostat_44_1
-  - climate.bedroom_ros_thermostat_55_1
+  - climate.annex_hall_thermostat
+  - climate.ballroom_east_thermostat
+  - climate.bedroom_mark_thermostat
+  - climate.hall_east_thermostat
+  - climate.hall_west_thermostat
+  - climate.kitchen_thermostat
+  - climate.library_thermostat
+  - climate.lounge_east_thermostat
+  - climate.study_east_thermostat
+  - climate.study_west_thermostat
+  - climate.danfoss_z_thermostat_014g0013_heating_1
+  - climate.bedroom_jerome_thermostat
+  - climate.bedroom_ros_thermostat
 
 network: !include network.yaml
 
