--- a/sensors/mock_sensors.yaml
+++ b/sensors/mock_sensors.yaml
@@ -1,56 +1,56 @@
-- name: study_west_temperature_15_1
+- name: study_west_temperature
   platform: mqtt
   state_topic: ha/mock/study/west/temperature/state
   unit_of_measurement: "\xB0C"
-- name: study_east_temperature_14_1
+- name: study_east_temperature
   platform: mqtt
   state_topic: ha/mock/study/east/temperature/state
   unit_of_measurement: "\xB0C"
-- name: lounge_east_temperature_30_1
+- name: lounge_east_temperature
   platform: mqtt
   state_topic: ha/mock/lounge/east/temperature/state
   unit_of_measurement: "\xB0C"
-- name: bedroom_mark_temperature_29_1
+- name: bedroom_mark_temperature
   platform: mqtt
   state_topic: ha/mock/bedroom_mark/temperature/state
   unit_of_measurement: "\xB0C"
-- name: kitchen_temperature_34_1
+- name: kitchen_temperature
   platform: mqtt
   state_topic: ha/mock/kitchen/temperature/state
   unit_of_measurement: "\xB0C"
-- name: ballroom_east_temperature_33_1
+- name: ballroom_east_temperature
   platform: mqtt
   state_topic: ha/mock/ballroom/east/temperature/state
   unit_of_measurement: "\xB0C"
-- name: library_temperature_25_1
+- name: library_temperature
   platform: mqtt
   state_topic: ha/mock/library/temperature/state
   unit_of_measurement: "\xB0C"
-- name: hall_west_temperature_13_1
+- name: hall_west_temperature
   platform: mqtt
   state_topic: ha/mock/hall/west/temperature/state
   unit_of_measurement: "\xB0C"
-- name: hall_east_temperature_24_1
+- name: hall_east_temperature
   platform: mqtt
   state_topic: ha/mock/hall/east/temperature/state
   unit_of_measurement: "\xB0C"
-- name: annex_hall_temperature_43_1
+- name: annex_hall_temperature
   platform: mqtt
   state_topic: ha/mock/annex-hall/temperature/state
   unit_of_measurement: "\xB0C"
-- name: guest_room_temperature_52_1
+- name: guest_room_temperature
   platform: mqtt
   state_topic: ha/mock/guest-room/temperature/state
   unit_of_measurement: "\xB0C"
-- name: bedroom_jerome_temperature_44_1
+- name: bedroom_jerome_temperature
   platform: mqtt
   state_topic: ha/mock/bedroom_jerome/temperature/state
   unit_of_measurement: "\xB0C"
-- name: eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_44_1
+- name: eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature
   platform: mqtt
   state_topic: ha/mock/bedroom_jerome/temperature/state
   unit_of_measurement: "\xB0C"
-- name: bedroom_ros_temperature_55_1
+- name: bedroom_ros_temperature
   platform: mqtt
   state_topic: ha/mock/bedroom_ros/temperature/state
   unit_of_measurement: "\xB0C"
