--- a/thermostats/mock_thermostats.yaml
+++ b/thermostats/mock_thermostats.yaml
@@ -1,80 +1,80 @@
 - heater: switch.study_demand
   max_temp: 25
   min_temp: 5
-  name: study_west_comfort_setpoint_15_1
+  name: study_west_comfort_setpoint
   platform: generic_thermostat
-  target_sensor: sensor.study_west_temperature_15_1
+  target_sensor: sensor.study_west_temperature
 - heater: switch.study_demand
   max_temp: 25
   min_temp: 5
-  name: study_east_comfort_setpoint_14_1
+  name: study_east_comfort_setpoint
   platform: generic_thermostat
-  target_sensor: sensor.study_east_temperature_14_1
+  target_sensor: sensor.study_east_temperature
 - heater: switch.lounge_demand
   max_temp: 25
   min_temp: 5
-  name: lounge_east_comfort_setpoint_30_1
+  name: lounge_east_comfort_setpoint
   platform: generic_thermostat
-  target_sensor: sensor.lounge_east_temperature_30_1
+  target_sensor: sensor.lounge_east_temperature
 - heater: switch.marks_bedroom_demand
   max_temp: 25
   min_temp: 5
-  name: bedroom_mark_comfort_setpoint_29_1
+  name: bedroom_mark_comfort_setpoint
   platform: generic_thermostat
-  target_sensor: sensor.bedroom_mark_temperature_29_1
+  target_sensor: sensor.bedroom_mark_temperature
 - heater: switch.kitchen_demand
   max_temp: 25
   min_temp: 5
-  name: kitchen_comfort_setpoint_34_1
+  name: kitchen_comfort_setpoint
   platform: generic_thermostat
-  target_sensor: sensor.kitchen_temperature_34_1
+  target_sensor: sensor.kitchen_temperature
 - heater: switch.ballroom_demand
   max_temp: 25
   min_temp: 5
-  name: ballroom_east_comfort_setpoint_33_1
+  name: ballroom_east_comfort_setpoint
   platform: generic_thermostat
-  target_sensor: sensor.ballroom_east_temperature_33_1
+  target_sensor: sensor.ballroom_east_temperature
 - heater: switch.library_demand
   max_temp: 25
   min_temp: 5
-  name: library_comfort_setpoint_25_1
+  name: library_comfort_setpoint
   platform: generic_thermostat
-  target_sensor: sensor.library_temperature_25_1
+  target_sensor: sensor.library_temperature
 - heater: switch.hall_demand
   max_temp: 25
   min_temp: 5
-  name: hall_west_comfort_setpoint_13_1
+  name: hall_west_comfort_setpoint
   platform: generic_thermostat
-  target_sensor: sensor.hall_west_temperature_13_1
+  target_sensor: sensor.hall_west_temperature
 - heater: switch.hall_demand
   max_temp: 25
   min_temp: 5
-  name: hall_east_comfort_setpoint_24_1
+  name: hall_east_comfort_setpoint
   platform: generic_thermostat
-  target_sensor: sensor.hall_east_temperature_24_1
+  target_sensor: sensor.hall_east_temperature
 - heater: switch.hall_demand
   max_temp: 25
   min_temp: 5
-  name: hall_annex_comfort_setpoint_43_1
+  name: hall_annex_comfort_setpoint
   platform: generic_thermostat
-  target_sensor: sensor.hall_annex_temperature_43_1
-- name: danfoss_z_thermostat_014g0013_heating_1_52_1
+  target_sensor: sensor.hall_annex_temperature
+- name: danfoss_z_thermostat_014g0013_heating_1
   heater: switch.hall_demand
   max_temp: 25
   min_temp: 5
   platform: generic_thermostat
-  target_sensor: sensor.guest_room_temperature_52_1
+  target_sensor: sensor.guest_room_temperature
 
-- name: bedroom_jerome_comfort_setpoint_44_1
+- name: bedroom_jerome_comfort_setpoint
   platform: generic_thermostat
   heater: switch.jeromes_bedroom_demand
   max_temp: 25
   min_temp: 5
-  target_sensor: sensor.bedroom_jerome_temperature_44_1
+  target_sensor: sensor.bedroom_jerome_temperature
 
-- name: bedroom_ros_comfort_setpoint_55_1
+- name: bedroom_ros_comfort_setpoint
   platform: generic_thermostat
   heater: switch.ross_bedroom_demand
   max_temp: 25
   min_temp: 5
-  target_sensor: sensor.bedroom_ros_temperature_55_1
+  target_sensor: sensor.bedroom_ros_temperature
