--- a/configuration.yaml
+++ b/configuration.yaml
@@ -55,6 +55,7 @@ zwave:
   usb_path: /dev/ttyUSB21
   config_path: /srv/hass/hass_venv/lib/python3.4/site-packages/libopenzwave-0.3.2-py3.4-linux-armv7l.egg/config
   polling_interval: 60000
+  new_entity_ids: true
   device_config: !include zwave_device_config.yaml
 
 rfxtrx:
