--- a/network.yaml
+++ b/network.yaml
@@ -1,8 +1,15 @@
 name: Network
 view: false
 entities:
+# infrastructure
 - device_tracker.router0
-- device_tracker.router1
+#- device_tracker.router1
+- device_tracker.climate
+- device_tracker.ap_west
+- device_tracker.ap_central
+- device_tracker.ap_east
+- device_tracker.poe_switch
+# media
 - device_tracker.hastur
 - device_tracker.study
 - device_tracker.kitchen
@@ -10,7 +17,8 @@ entities:
 - device_tracker.lounge
 - device_tracker.library
 - device_tracker.bedroommark
-- device_tracker.ricoh213w
-- device_tracker.canonmg5550
 - device_tracker.loungetv
 - device_tracker.ballroomamp
+# printers
+- device_tracker.ricoh213w
+- device_tracker.canonmg5550
