--- a/sensors/climate-cm-2.yaml
+++ b/sensors/climate-cm-2.yaml
@@ -18,17 +18,19 @@
   platform: snmp
   host: climate
   baseoid: 1.3.6.1.4.1.17373.3.2.1.8.1
-  unit_of_measurement: lux
+  unit_of_measurement: '%'
 
 - name: cm2_airflow
   platform: snmp
   host: climate
   baseoid: 1.3.6.1.4.1.17373.3.2.1.9.1
+  unit_of_measurement: '%'
 
 - name: cm2_sound
   platform: snmp
   host: climate
   baseoid: 1.3.6.1.4.1.17373.3.2.1.10.1
+  unit_of_measurement: '%'
 
 - name: cm2_dew_point_c
   platform: snmp
