logbook, history: cm2 climate data

--- a/logbook.yaml
+++ b/logbook.yaml
@@ -42,6 +42,12 @@ include:
     - sensor.aeotec_dsb05_multisensor_relative_humidity
     - sensor.greenwave_powernode_53_power
     - sensor.greenwave_powernode_54_power
+    - sensor.cm2_temp_c
+    - sensor.cm2_humidity
+    - sensor.cm2_light
+    - sensor.cm2_airflow
+    - sensor.cm2_sound
+    - sensor.cm2_dew_point_c
 exclude:
   domains:
     - updater
