--- a/history.yaml
+++ b/history.yaml
@@ -47,4 +47,10 @@ include:
     - sensor.aeotec_dsb05_multisensor_relative_humidity
     - sensor.greenwave_powernode_53_energy
     - sensor.greenwave_powernode_53_power
+    - sensor.cm2_temp_c
+    - sensor.cm2_humidity
+    - sensor.cm2_light
+    - sensor.cm2_airflow
+    - sensor.cm2_sound
+    - sensor.cm2_dew_point_c
 
