--- a/sensors/batteries.yaml
+++ b/sensors/batteries.yaml
@@ -18,104 +18,104 @@
       unit_of_measurement: '%'
     hall_multisensor_battery:
       value_template: >
-        {% if states.zwave.aeotec_dsb05_multisensor_3 %}
-          {{ states.zwave.aeotec_dsb05_multisensor_3.attributes.battery_level }}
+        {% if states.zwave.aeotec_dsb05_multisensor %}
+          {{ states.zwave.aeotec_dsb05_multisensor.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     hall_east_battery:
       value_template: >
-        {% if states.zwave.hall_east_24 %}
-          {{ states.zwave.hall_east_24.attributes.battery_level }}
+        {% if states.zwave.hall_east %}
+          {{ states.zwave.hall_east.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     hall_west_battery:
       value_template: >
-        {% if states.zwave.hall_west_13 %}
-          {{ states.zwave.hall_west_13.attributes.battery_level }}
+        {% if states.zwave.hall_west %}
+          {{ states.zwave.hall_west.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     annex_hall_battery:
       value_template: >
-        {% if states.zwave.annex_hall_43 %}
-          {{ states.zwave.annex_hall_43.attributes.battery_level }}
+        {% if states.zwave.annex_hall %}
+          {{ states.zwave.annex_hall.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     ballroom_east_battery:
       value_template: >
-        {% if states.zwave.ballroom_east_33 %}
-          {{ states.zwave.ballroom_east_33.attributes.battery_level }}
+        {% if states.zwave.ballroom_east %}
+          {{ states.zwave.ballroom_east.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     bedroom_mark_battery:
       value_template: >
-        {% if states.zwave.bedroom_mark_29 %}
-          {{ states.zwave.bedroom_mark_29.attributes.battery_level }}
+        {% if states.zwave.bedroom_mark %}
+          {{ states.zwave.bedroom_mark.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     kitchen_battery:
       value_template: >
-        {% if states.zwave.kitchen_34 %}
-          {{ states.zwave.kitchen_34.attributes.battery_level }}
+        {% if states.zwave.kitchen %}
+          {{ states.zwave.kitchen.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     library_battery:
       value_template: >
-        {% if states.zwave.library_25 %}
-          {{ states.zwave.library_25.attributes.battery_level }}
+        {% if states.zwave.library %}
+          {{ states.zwave.library.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     lounge_east_battery:
       value_template: >
-        {% if states.zwave.lounge_east_30 %}
-          {{ states.zwave.lounge_east_30.attributes.battery_level }}
+        {% if states.zwave.lounge_east %}
+          {{ states.zwave.lounge_east.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     study_east_battery:
       value_template: >
-        {% if states.zwave.study_east_14 %}
-          {{ states.zwave.study_east_14.attributes.battery_level }}
+        {% if states.zwave.study_east %}
+          {{ states.zwave.study_east.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     study_west_battery:
       value_template: >
-        {% if states.zwave.study_west_15 %}
-          {{ states.zwave.study_west_15.attributes.battery_level}}
+        {% if states.zwave.study_west %}
+          {{ states.zwave.study_west.attributes.battery_level}}
         {%  else %}
           unknown
         {%  endif %}
       unit_of_measurement: '%'
     bedroom_jerome_battery:
       value_template: >
-        {% if states.zwave.bedroom_jerome_44 %}
-          {{ states.zwave.bedroom_jerome_44.attributes.battery_level }}
+        {% if states.zwave.bedroom_jerome %}
+          {{ states.zwave.bedroom_jerome.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     bedroom_ros_battery:
       value_template: >
-        {% if states.zwave.bedroom_ros_55 %}
-          {{ states.zwave.bedroom_ros_55.attributes.battery_level }}
+        {% if states.zwave.bedroom_ros %}
+          {{ states.zwave.bedroom_ros.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
